--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <script>
         function goToMainPage() {
             // Redirect to the main page
-            window.location.href = 'index.html'; // Replace with your actual main page file
+            window.location.href = 'main.html'; // Replace with your actual main page file
         }
     </script>
 </body>
