--- a/main.html
+++ b/main.html
@@ -32,10 +32,14 @@
     <div id="weatherOutput" class="weather-table"></div>
 
     <div class="chart-section">
-        <p>Temperature Trend</span></p>
+        <p>Temperature Trend</p>
         <div class="chart-container">
-            <canvas id="weatherChart"></canvas>
+            <canvas id="weatherChart"></canvas> 
         </div>
-    </div> 
+    </div>
+    <br><br>
+    <div> 
+    <ul id="weatherList" class="list-group mt-4" style="color: black; text-align:center;"></ul>
+    </div>
 </body>
 </html>
